--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  height: 100%;
+  width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+}
+
+.page-content {
+  margin-left: 300px;
 }
