--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 .App {
   height: 100%;
   width: 100%;
+  background: url("mockaroon-YqUeLG7fMr4-unsplash.jpg") no-repeat center center
+    fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
