--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,7 +8,8 @@
   align-items: center;
   flex-direction: column;
   position: fixed;
-  background: url("http://api.thumbr.it/whitenoise-361x370.png?background=ede8edff&noise=626262&density=26&opacity=16");
+  /* background: url("http://api.thumbr.it/whitenoise-361x370.png?background=ede8edff&noise=626262&density=26&opacity=16"); */
+  background-color: red 0.5;
 }
 
 .buttons-container {
@@ -22,6 +23,7 @@
 
 /* .menu-list {
   display: flex;
+  flex-direction: column;
   position: relative;
 } */
 
