--- a/src/Components/Pages/Experience/Experience.css
+++ b/src/Components/Pages/Experience/Experience.css
@@ -1,9 +1,93 @@
 .experience-container {
-  margin-left: 250px;
+  margin-left: 210px;
   font-family: "Open Sans", sans-serif;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
   height: 100%;
-  /* padding-top: 200px; */
+}
+
+.era-container,
+.era-container-first {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.era-container {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.experience-details {
+  width: 600px;
+  padding-right: 50px;
+}
+
+.experience-details h4 {
+  margin-left: 50px;
+}
+
+.experience-details li {
+  padding: 10px;
+}
+
+#experience-page-title {
+  text-align: center;
+  font-size: 22px;
+  padding-top: 20px;
+  padding-bottom: 50px;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.experience-image-container {
+  background-color: transparent;
+  perspective: 1000px;
+  width: 180px;
+  height: 240px;
+  transition-duration: 0.8s;
+  padding-right: 50px;
+}
+
+.experience-image-container:hover .experience-image-hover {
+  transform: rotateY(180deg);
+}
+
+.experience-image-hover {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.experience-image-front,
+.experience-image-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.experience-image-front {
+  color: black;
+}
+
+.experience-image-back {
+  transform: rotateY(180deg);
+  transition: all 3s ease;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.experience-image-hover {
+  width: 170px;
+}
+
+.scit-image {
+  height: 150px;
+}
+
+.infolocal-image {
+  width: 300px;
+  padding-left: 20px;
+  padding-right: 80px;
 }
