--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,9 @@
 .header-container {
   padding-top: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 100px;
+  padding-right: 100px;
   height: 100%;
-  width: 150px;
+  width: 200px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -20,17 +20,18 @@
   list-style-type: none;
 }
 
-/* .menu-list {
-  display: flex;
+.menu-list {
+  /* display: flex;
   flex-direction: column;
-  position: relative;
-} */
+  position: relative; */
+  width: 150px;
+}
 
 .buttons-container li {
   margin-bottom: 20px;
   text-align: end;
   /* position: absolute; */
-  font-size: 20px;
+  font-size: 19px;
 }
 
 .selected {
@@ -46,6 +47,7 @@
 .top {
   font-family: "Josefin Sans", sans-serif;
   display: flex;
+  width: 150px;
 }
 
 .bottom {
@@ -55,6 +57,7 @@
 .media-icons {
   display: flex;
   justify-content: space-evenly;
+  font-size: 20px;
 }
 
 .copyright {
