--- a/src/Components/Pages/ContactMe/ContactMe.css
+++ b/src/Components/Pages/ContactMe/ContactMe.css
@@ -5,7 +5,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 80px;
+  padding-top: 50px;
+}
+
+.contact-page-container h4 {
+  padding-bottom: 40px;
 }
 
 .contact-page-form-container,
@@ -14,7 +18,6 @@
 }
 
 .contact-page-form {
-  padding-top: 50px;
   width: 500px;
   height: auto;
 }
@@ -26,7 +29,14 @@
 }
 
 .contact-page-message {
-  /* width: 400px; */
+  width: 400px;
   padding-right: 100px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.gmap-cj {
+  padding-top: 20px;
 }
