--- a/src/Components/Pages/Experience/Experience.css
+++ b/src/Components/Pages/Experience/Experience.css
@@ -11,9 +11,17 @@
   align-items: center;
 }
 
-.era-container {
+.era-container,
+.galt-era-container {
   padding-top: 70px;
   padding-bottom: 70px;
+}
+
+.galt-era-container {
+  display: flex;
+  align-items: center;
+  padding-left: 80px;
+  position: relative;
 }
 
 .era-container-first {
@@ -24,11 +32,6 @@
   width: 700px;
   padding-right: 50px;
   padding-left: 50px;
-}
-
-.hidden-message {
-  font-weight: bolder;
-  color: darkblue;
 }
 
 .experience-title {
@@ -51,54 +54,37 @@
 
 .experience-image-container {
   background-color: transparent;
-  perspective: 1000px;
   width: 180px;
   height: 240px;
-  transition-duration: 0.8s;
   padding-right: 80px;
 }
 
-.experience-image-container:hover .experience-image-hover {
-  transform: rotateX(180deg);
-}
-
-.experience-image-hover {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: 0.8s;
-  transform-style: preserve-3d;
-}
-
-.experience-image-front,
-.experience-image-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.experience-image-front {
-  color: black;
-}
-
-.experience-image-back {
-  transform: rotateY(180deg);
-  transition: all 1s ease;
-}
-
-.experience-image-hover {
+.experience-image-research {
   width: 170px;
 }
 
-.scit-image {
+#scit-image {
   height: 150px;
 }
 
-.infolocal-image {
+.wide-logo-image {
   width: 300px;
   padding-left: 20px;
-  padding-right: 80px;
+}
+
+.galt-experience-details {
+  width: 600px;
+}
+
+.galt-image-container {
+  width: 430px;
+}
+
+.galt-logo-container {
+  text-align: center;
+}
+
+#galt-logo {
+  width: 150px;
+  padding-bottom: 20px;
 }
