--- a/src/Components/WelcomeModal/WelcomeModal.css
+++ b/src/Components/WelcomeModal/WelcomeModal.css
@@ -1,3 +1,23 @@
 .modal-structures {
-  background: url("boat.jpg");
+  background: url("boat.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.modal-content {
+  height: 90vh;
+}
+
+.splash-modal-quote {
+  text-align: center;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 25px;
+  color: rgb(228, 228, 228);
+}
+
+#splash-modal-button {
+  position: absolute;
+  right: 120px;
 }
