email-form functionality done

--- a/src/Components/Pages/ContactMe/ContactMe.css
+++ b/src/Components/Pages/ContactMe/ContactMe.css
@@ -40,3 +40,16 @@
 .gmap-cj {
   padding-top: 20px;
 }
+
+::-webkit-input-placeholder {
+  font-style: italic;
+}
+:-moz-placeholder {
+  font-style: italic;
+}
+::-moz-placeholder {
+  font-style: italic;
+}
+:-ms-input-placeholder {
+  font-style: italic;
+}
