--- a/src/Components/Pages/Project/Project.css
+++ b/src/Components/Pages/Project/Project.css
@@ -12,7 +12,7 @@
 }
 
 .project-carousel-container {
-  padding-top: 70px;
+  padding-top: 0px;
   padding-bottom: 70px;
 }
 
@@ -29,7 +29,7 @@
 
 .project-title {
   margin-left: 50px;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
   font-size: 16px;
   font-weight: bold;
 }
@@ -55,4 +55,14 @@
   padding-top: 20px;
   color: black;
   font-size: 20px;
+}
+
+.highlighted-words {
+  font-weight: bold;
+}
+
+.project-page-intro {
+  text-align: center;
+  font-size: 18px;
+  font-family: "Josefin Sans", sans-serif;
 }
