experience page collapse done

--- a/src/Components/Pages/Experience/Experience.css
+++ b/src/Components/Pages/Experience/Experience.css
@@ -4,6 +4,10 @@
   height: 100%;
 }
 
+.accordion {
+  width: 1000px;
+}
+
 .era-container,
 .era-container-first {
   display: flex;
@@ -28,16 +32,14 @@
   padding-bottom: 60px;
 }
 
-.experience-details {
-  width: 700px;
-  padding-right: 50px;
-  padding-left: 50px;
-}
-
 .experience-title {
   margin-left: 50px;
   font-size: 16px;
   font-weight: bold;
+}
+
+.experience-details {
+  padding: 10px;
 }
 
 .experience-details li {
@@ -48,7 +50,7 @@
   text-align: center;
   font-size: 22px;
   padding-top: 80px;
-  padding-bottom: 80px;
+  padding-bottom: 40px;
   font-family: "Josefin Sans", sans-serif;
 }
 
@@ -87,4 +89,22 @@
 #galt-logo {
   width: 150px;
   padding-bottom: 20px;
+}
+
+.card,
+.card-header {
+  background-color: transparent !important;
+  border: none !important;
+  padding: 0 !important;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+.card {
+  box-shadow: 0 2px 20px 0 rgba(110, 130, 208, 0.18);
+}
+
+.card-header:hover {
+  cursor: pointer;
+  color: #61dbfb;
 }
