--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,7 +7,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  position: fixed;
+  position: sticky;
+  top: 0;
   /* background: url("http://api.thumbr.it/whitenoise-361x370.png?background=ede8edff&noise=626262&density=26&opacity=16"); */
 }
 
