--- a/src/Components/Pages/Homepage/Homepage.css
+++ b/src/Components/Pages/Homepage/Homepage.css
@@ -1,5 +1,5 @@
 .homepage-container {
-  margin-left: 210px;
+  /* margin-left: 210px; */
   font-family: "Open Sans", sans-serif;
   display: flex;
   justify-content: center;
