--- a/src/Components/Pages/Project/Project.css
+++ b/src/Components/Pages/Project/Project.css
@@ -1,5 +1,5 @@
 .group-project-container {
-  margin-left: 210px;
+  /* margin-left: 210px; */
   font-family: "Open Sans", sans-serif;
   height: 100%;
 }
