--- a/src/Components/Pages/AboutMe/AboutMe.css
+++ b/src/Components/Pages/AboutMe/AboutMe.css
@@ -10,6 +10,7 @@
   padding-top: 80px;
   padding-bottom: 80px;
   font-family: "Josefin Sans", sans-serif;
+  margin-left: 120px;
 }
 
 .about-page-content {
