--- a/src/Components/Pages/ContactMe/ContactMe.css
+++ b/src/Components/Pages/ContactMe/ContactMe.css
@@ -10,6 +10,7 @@
 
 .contact-page-container h4 {
   padding-bottom: 40px;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .contact-page-form-container,
@@ -31,7 +32,6 @@
 .contact-page-message {
   width: 400px;
   padding-right: 100px;
-  /* opacity: 0.7; */
   display: flex;
   flex-direction: column;
   align-items: center;
