--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .App {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 2rem;
   height: 100%;
   width: 100%;
   background: url("mockaroon-YqUeLG7fMr4-unsplash.jpg") no-repeat center center
@@ -8,7 +11,6 @@
   -o-background-size: cover;
   background-size: cover;
   overflow-y: scroll;
-  display: flex;
 }
 
 .page {
